syntax = "proto3";

import "google/protobuf/timestamp.proto";

option java_package = "ru.neoflex.market.order";

package order;

message OrderRequest {
  string userId = 1;
}

message OrderResponse {
  string orderId = 1;
  string status = 2;
}

service OrderService {
  rpc getOrder(OrderRequest) returns (OrderResponse) {}
}